# embed-wasm-example

./: Cargo.toml  README.md
frontend/: Cargo.toml
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
server/src/: main.rs
