[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
shared-types = { path = "../../shared-types" }
serde = "1"
serde_derive = "1"
stdweb = "0.4"
yew = { version = "0.17.3", features = ["std_web", "services"], default-features = false }

# empty workspace
[workspace]